src/shared/components/Header/style.css
header {
  height: var(--headerHeight);

  position: sticky;
  top: 0;

  background-color: white;

  & > div {
    padding: 0.5rem 8.5rem;

    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  & #contactInfo {
    width: 60%;

    color: var(--colorSecondary);

    & #phone {
      width: 40%;
    }

    & #address {
      width: 60%;
    }
  }
}

#companyLogo {
  width: 7rem;

  object-fit: cover;
}

.companyTitle,
.companySubtitleFirstPart,
.companySubtitleSecondPart {
  color: var(--colorSecondary);

  font-family: "Poppins", sans-serif;
  font-weight: 500;
}

.companyTitle {
  margin: -1rem 0;

  font-size: 3.6rem;
  letter-spacing: 0.35rem;
}

.companySubtitleFirstPart {
  font-size: 1.15rem;
}

.companySubtitleSecondPart {
  margin-top: -0.1rem;
  font-size: 0.7rem;

  font-weight: 600;
}

#cartBtn {
  color: var(--colorSecondary);

  position: relative;

  & > p {
    font-size: 70%;
    font-weight: bold;

    width: 1.5rem;
    height: 1.5rem;
    line-height: 1.5rem;
    position: absolute;

    top: -0.5rem;
    right: -1rem;

    background-color: var(--colorSecondary);
    color: white;

    border-radius: 50%;
  }
}

